# rust_cats_api

./: .env  .gitignore  Cargo.toml
migrations/2020-04-26-165719_create_cats/: down.sql  up.sql
migrations/2020-04-29-223525_add_desc_to_cats/: down.sql  up.sql
src/: guards.rs  main.rs  models.rs  resources.rs  schema.rs
src/models/: cat_model.rs  mod.rs
src/resources/: cat.rs  cats.rs  mod.rs  util.rs
